Fix broken css rule

--- a/src/BloomBrowserUI/bookEdit/sourceBubbles/sourceBubbles.less
+++ b/src/BloomBrowserUI/bookEdit/sourceBubbles/sourceBubbles.less
@@ -94,7 +94,7 @@
 					}
 					&:hover {
 						text-decoration: underline;
-						background-color: @BubbleBackground transparent;
+						background-color: @BubbleBackground;
 					}
 				}
 			}
